# ws-test

./: README.md
cloud_functions/data_loader/: main.py  pyproject.toml  requirements.txt
cloud_functions/data_loader/lib/: __init__.py  bq_uploader.py  file_handler.py  google_cloud_storage.py  response.py
docs/: data_stack_extended.md
