[tool.poetry]
name = "loader"
version = "0.1.1"
description = ""
authors = ["waiqueri <jesusrojas@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pyarrow = "^10.0.1"
google-cloud-storage = "^2.7.0"
google-cloud-bigquery = "^3.4.2"
functions-framework = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
